irspitter/bin/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE
    TDASH

Grammar

Rule 0     S' -> sdash
Rule 1     sdash -> chunk
Rule 2     sdash -> chunk laststat
Rule 3     sdash -> laststat
Rule 4     sdash -> chunk laststat SEMI
Rule 5     chunk -> chunk stat
Rule 6     chunk -> chunk stat SEMI
Rule 7     chunk -> stat SEMI
Rule 8     chunk -> stat
Rule 9     block -> sdash
Rule 10    stat -> varlist EQUALS explist
Rule 11    stat -> for names EQUALS exp COMMA exp do block end
Rule 12    stat -> for names EQUALS exp COMMA exp COMMA exp do block end
Rule 13    stat -> for namelist in explist do block end
Rule 14    stat -> while exp do block end
Rule 15    stat -> repeat block until exp
Rule 16    stat -> do block end
Rule 17    stat -> function funcname funcbody
Rule 18    stat -> local function names funcbody
Rule 19    stat -> local namelist
Rule 20    stat -> local namelist EQUALS explist
Rule 21    stat -> functioncall
Rule 22    funcbody -> LPAREN RPAREN block end
Rule 23    funcbody -> LPAREN parlist RPAREN block end
Rule 24    functioncall -> prefixexp args
Rule 25    args -> LPAREN RPAREN
Rule 26    args -> LPAREN explist RPAREN
Rule 27    args -> tableconstructor
Rule 28    args -> STRING
Rule 29    parlist -> namelist
Rule 30    parlist -> namelist comtrp
Rule 31    parlist -> TRPLDOTS
Rule 32    comtrp -> COMMA TRPLDOTS
Rule 33    laststat -> return retexplist
Rule 34    laststat -> return
Rule 35    laststat -> break
Rule 36    funcname -> names dotid COLON
Rule 37    funcname -> names
Rule 38    dotid -> SDOT names dotid
Rule 39    dotid -> empty
Rule 40    comvar -> COMMA var comvar
Rule 41    comvar -> empty
Rule 42    comid -> COMMA names comid
Rule 43    comid -> empty
Rule 44    stat -> if exp then M_if1 block ifblock end
Rule 45    M_if1 -> empty
Rule 46    stat -> if exp then M_if1 block ifblock M_if3 else M_if4 block end
Rule 47    M_if2 -> empty
Rule 48    M_if3 -> empty
Rule 49    M_if4 -> empty
Rule 50    ifblock -> ifblock M_if5 elseif M_if6 exp then block
Rule 51    ifblock -> empty
Rule 52    M_if5 -> empty
Rule 53    M_if6 -> empty
Rule 54    varlist -> var comvar
Rule 55    var -> names
Rule 56    var -> prefixexp LSQUARE exp RSQUARE
Rule 57    var -> prefixexp SDOT names
Rule 58    namelist -> names comid
Rule 59    explist -> explist COMMA exp
Rule 60    explist -> exp
Rule 61    exp -> nil
Rule 62    exp -> false
Rule 63    exp -> true
Rule 64    exp -> Number
Rule 65    exp -> STRING
Rule 66    exp -> TRPLDOTS
Rule 67    exp -> function
Rule 68    exp -> prefixexp
Rule 69    exp -> exp PLUS exp
Rule 70    exp -> exp MINUS exp
Rule 71    exp -> exp TIMES exp
Rule 72    exp -> exp DIVIDE exp
Rule 73    exp -> exp POWER exp
Rule 74    exp -> exp LT exp
Rule 75    exp -> exp LE exp
Rule 76    exp -> exp GT exp
Rule 77    exp -> exp GE exp
Rule 78    exp -> exp NE exp
Rule 79    exp -> exp CHECKEQ exp
Rule 80    exp -> exp and exp
Rule 81    exp -> exp or exp
Rule 82    exp -> exp MODULO exp
Rule 83    exp -> exp DBLDOTS exp
Rule 84    exp -> tableconstructor
Rule 85    exp -> unop exp
Rule 86    retexplist -> retexplist COMMA retexp
Rule 87    retexplist -> retexp
Rule 88    retexp -> nil
Rule 89    retexp -> false
Rule 90    retexp -> true
Rule 91    retexp -> Number
Rule 92    retexp -> STRING
Rule 93    retexp -> TRPLDOTS
Rule 94    retexp -> prefixexp
Rule 95    retexp -> exp PLUS exp
Rule 96    retexp -> exp MINUS exp
Rule 97    retexp -> exp TIMES exp
Rule 98    retexp -> exp DIVIDE exp
Rule 99    retexp -> exp POWER exp
Rule 100   retexp -> exp LT exp
Rule 101   retexp -> exp LE exp
Rule 102   retexp -> exp GT exp
Rule 103   retexp -> exp GE exp
Rule 104   retexp -> exp NE exp
Rule 105   retexp -> exp CHECKEQ exp
Rule 106   retexp -> exp and exp
Rule 107   retexp -> exp or exp
Rule 108   retexp -> exp MODULO exp
Rule 109   retexp -> exp DBLDOTS exp
Rule 110   retexp -> tableconstructor
Rule 111   retexp -> unop exp
Rule 112   Number -> INTEGER
Rule 113   Number -> FLOAT
Rule 114   Number -> HEX
Rule 115   empty -> <empty>
Rule 116   prefixexp -> var
Rule 117   prefixexp -> LPAREN exp RPAREN
Rule 118   prefixexp -> functioncall
Rule 119   unop -> MINUS
Rule 120   unop -> not
Rule 121   unop -> HASH
Rule 122   tableconstructor -> LCURLY fieldlist RCURLY
Rule 123   tableconstructor -> LCURLY RCURLY
Rule 124   fieldlist -> field fieldseplist fieldsep
Rule 125   fieldlist -> field fieldseplist
Rule 126   fieldseplist -> fieldseplist fieldsep field
Rule 127   fieldseplist -> empty
Rule 128   field -> LSQUARE exp RSQUARE EQUALS exp
Rule 129   field -> names EQUALS exp
Rule 130   field -> exp
Rule 131   fieldsep -> COMMA
Rule 132   fieldsep -> SEMI
Rule 133   names -> ID
Rule 134   names -> RESID

Terminals, with rules where they appear

CHECKEQ              : 79 105
COLON                : 36
COMMA                : 11 12 12 32 40 42 59 86 131
DBLDOTS              : 83 109
DIVIDE               : 72 98
EQUALS               : 10 11 12 20 128 129
FLOAT                : 113
GE                   : 77 103
GT                   : 76 102
HASH                 : 121
HEX                  : 114
ID                   : 133
INTEGER              : 112
LCURLY               : 122 123
LE                   : 75 101
LPAREN               : 22 23 25 26 117
LSQUARE              : 56 128
LT                   : 74 100
MINUS                : 70 96 119
MODULO               : 82 108
NE                   : 78 104
NEWLINE              : 
PLUS                 : 69 95
POWER                : 73 99
RCURLY               : 122 123
RESID                : 134
RPAREN               : 22 23 25 26 117
RSQUARE              : 56 128
SDOT                 : 38 57
SEMI                 : 4 6 7 132
STRING               : 28 65 92
TDASH                : 
TIMES                : 71 97
TRPLDOTS             : 31 32 66 93
and                  : 80 106
break                : 35
do                   : 11 12 13 14 16
else                 : 46
elseif               : 50
end                  : 11 12 13 14 16 22 23 44 46
error                : 
false                : 62 89
for                  : 11 12 13
function             : 17 18 67
if                   : 44 46
in                   : 13
local                : 18 19 20
nil                  : 61 88
not                  : 120
or                   : 81 107
repeat               : 15
return               : 33 34
then                 : 44 46 50
true                 : 63 90
until                : 15
while                : 14

Nonterminals, with rules where they appear

M_if1                : 44 46
M_if2                : 
M_if3                : 46
M_if4                : 46
M_if5                : 50
M_if6                : 50
Number               : 64 91
args                 : 24
block                : 11 12 13 14 15 16 22 23 44 46 46 50
chunk                : 1 2 4 5 6
comid                : 42 58
comtrp               : 30
comvar               : 40 54
dotid                : 36 38
empty                : 39 41 43 45 47 48 49 51 52 53 127
exp                  : 11 11 12 12 12 14 15 44 46 50 56 59 60 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 85 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 104 105 105 106 106 107 107 108 108 109 109 111 117 128 128 129 130
explist              : 10 13 20 26 59
field                : 124 125 126
fieldlist            : 122
fieldsep             : 124 126
fieldseplist         : 124 125 126
funcbody             : 17 18
funcname             : 17
functioncall         : 21 118
ifblock              : 44 46 50
laststat             : 2 3 4
namelist             : 13 19 20 29 30
names                : 11 12 18 36 37 38 42 55 57 58 129
parlist              : 23
prefixexp            : 24 56 57 68 94
retexp               : 86 87
retexplist           : 33 86
sdash                : 9 0
stat                 : 5 6 7 8
tableconstructor     : 27 84 110
unop                 : 85 111
var                  : 40 54 116
varlist              : 10

Parsing method: LALR

state 0

    (0) S' -> . sdash
    (1) sdash -> . chunk
    (2) sdash -> . chunk laststat
    (3) sdash -> . laststat
    (4) sdash -> . chunk laststat SEMI
    (5) chunk -> . chunk stat
    (6) chunk -> . chunk stat SEMI
    (7) chunk -> . stat SEMI
    (8) chunk -> . stat
    (33) laststat -> . return retexplist
    (34) laststat -> . return
    (35) laststat -> . break
    (10) stat -> . varlist EQUALS explist
    (11) stat -> . for names EQUALS exp COMMA exp do block end
    (12) stat -> . for names EQUALS exp COMMA exp COMMA exp do block end
    (13) stat -> . for namelist in explist do block end
    (14) stat -> . while exp do block end
    (15) stat -> . repeat block until exp
    (16) stat -> . do block end
    (17) stat -> . function funcname funcbody
    (18) stat -> . local function names funcbody
    (19) stat -> . local namelist
    (20) stat -> . local namelist EQUALS explist
    (21) stat -> . functioncall
    (44) stat -> . if exp then M_if1 block ifblock end
    (46) stat -> . if exp then M_if1 block ifblock M_if3 else M_if4 block end
    (54) varlist -> . var comvar
    (24) functioncall -> . prefixexp args
    (55) var -> . names
    (56) var -> . prefixexp LSQUARE exp RSQUARE
    (57) var -> . prefixexp SDOT names
    (116) prefixexp -> . var
    (117) prefixexp -> . LPAREN exp RPAREN
    (118) prefixexp -> . functioncall
    (133) names -> . ID
    (134) names -> . RESID

    return          shift and go to state 16
    break           shift and go to state 17
    for             shift and go to state 7
    while           shift and go to state 20
    repeat          shift and go to state 15
    do              shift and go to state 13
    function        shift and go to state 12
    local           shift and go to state 19
    if              shift and go to state 5
    LPAREN          shift and go to state 2
    ID              shift and go to state 18
    RESID           shift and go to state 1

    chunk                          shift and go to state 3
    names                          shift and go to state 4
    prefixexp                      shift and go to state 6
    varlist                        shift and go to state 8
    laststat                       shift and go to state 9
    var                            shift and go to state 10
    functioncall                   shift and go to state 11
    stat                           shift and go to state 14
    sdash                          shift and go to state 21

state 1

    (134) names -> RESID .

    COMMA           reduce using rule 134 (names -> RESID .)
    EQUALS          reduce using rule 134 (names -> RESID .)
    LSQUARE         reduce using rule 134 (names -> RESID .)
    SDOT            reduce using rule 134 (names -> RESID .)
    LPAREN          reduce using rule 134 (names -> RESID .)
    STRING          reduce using rule 134 (names -> RESID .)
    LCURLY          reduce using rule 134 (names -> RESID .)
    $end            reduce using rule 134 (names -> RESID .)
    SEMI            reduce using rule 134 (names -> RESID .)
    end             reduce using rule 134 (names -> RESID .)
    until           reduce using rule 134 (names -> RESID .)
    else            reduce using rule 134 (names -> RESID .)
    elseif          reduce using rule 134 (names -> RESID .)
    PLUS            reduce using rule 134 (names -> RESID .)
    MINUS           reduce using rule 134 (names -> RESID .)
    TIMES           reduce using rule 134 (names -> RESID .)
    DIVIDE          reduce using rule 134 (names -> RESID .)
    POWER           reduce using rule 134 (names -> RESID .)
    LT              reduce using rule 134 (names -> RESID .)
    LE              reduce using rule 134 (names -> RESID .)
    GT              reduce using rule 134 (names -> RESID .)
    GE              reduce using rule 134 (names -> RESID .)
    NE              reduce using rule 134 (names -> RESID .)
    CHECKEQ         reduce using rule 134 (names -> RESID .)
    and             reduce using rule 134 (names -> RESID .)
    or              reduce using rule 134 (names -> RESID .)
    MODULO          reduce using rule 134 (names -> RESID .)
    DBLDOTS         reduce using rule 134 (names -> RESID .)
    RPAREN          reduce using rule 134 (names -> RESID .)
    then            reduce using rule 134 (names -> RESID .)
    do              reduce using rule 134 (names -> RESID .)
    RCURLY          reduce using rule 134 (names -> RESID .)
    RSQUARE         reduce using rule 134 (names -> RESID .)
    return          reduce using rule 134 (names -> RESID .)
    break           reduce using rule 134 (names -> RESID .)
    for             reduce using rule 134 (names -> RESID .)
    while           reduce using rule 134 (names -> RESID .)
    repeat          reduce using rule 134 (names -> RESID .)
    function        reduce using rule 134 (names -> RESID .)
    local           reduce using rule 134 (names -> RESID .)
    if              reduce using rule 134 (names -> RESID .)
    ID              reduce using rule 134 (names -> RESID .)
    RESID           reduce using rule 134 (names -> RESID .)
    COLON           reduce using rule 134 (names -> RESID .)
    in              reduce using rule 134 (names -> RESID .)


state 2

    (117) prefixexp -> LPAREN . exp RPAREN
    (61) exp -> . nil
    (62) exp -> . false
    (63) exp -> . true
    (64) exp -> . Number
    (65) exp -> . STRING
    (66) exp -> . TRPLDOTS
    (67) exp -> . function
    (68) exp -> . prefixexp
    (69) exp -> . exp PLUS exp
    (70) exp -> . exp MINUS exp
    (71) exp -> . exp TIMES exp
    (72) exp -> . exp DIVIDE exp
    (73) exp -> . exp POWER exp
    (74) exp -> . exp LT exp
    (75) exp -> . exp LE exp
    (76) exp -> . exp GT exp
    (77) exp -> . exp GE exp
    (78) exp -> . exp NE exp
    (79) exp -> . exp CHECKEQ exp
    (80) exp -> . exp and exp
    (81) exp -> . exp or exp
    (82) exp -> . exp MODULO exp
    (83) exp -> . exp DBLDOTS exp
    (84) exp -> . tableconstructor
    (85) exp -> . unop exp
    (112) Number -> . INTEGER
    (113) Number -> . FLOAT
    (114) Number -> . HEX
    (116) prefixexp -> . var
    (117) prefixexp -> . LPAREN exp RPAREN
    (118) prefixexp -> . functioncall
    (122) tableconstructor -> . LCURLY fieldlist RCURLY
    (123) tableconstructor -> . LCURLY RCURLY
    (119) unop -> . MINUS
    (120) unop -> . not
    (121) unop -> . HASH
    (55) var -> . names
    (56) var -> . prefixexp LSQUARE exp RSQUARE
    (57) var -> . prefixexp SDOT names
    (24) functioncall -> . prefixexp args
    (133) names -> . ID
    (134) names -> . RESID

    nil             shift and go to state 32
    false           shift and go to state 23
    true            shift and go to state 35
    STRING          shift and go to state 27
    TRPLDOTS        shift and go to state 41
    function        shift and go to state 31
    INTEGER         shift and go to state 30
    FLOAT           shift and go to state 36
    HEX             shift and go to state 33
    LPAREN          shift and go to state 2
    LCURLY          shift and go to state 24
    MINUS           shift and go to state 26
    not             shift and go to state 34
    HASH            shift and go to state 25
    ID              shift and go to state 18
    RESID           shift and go to state 1

    prefixexp                      shift and go to state 28
    tableconstructor               shift and go to state 22
    Number                         shift and go to state 37
    unop                           shift and go to state 40
    functioncall                   shift and go to state 38
    exp                            shift and go to state 39
    var                            shift and go to state 29
    names                          shift and go to state 4

state 3

    (1) sdash -> chunk .
    (2) sdash -> chunk . laststat
    (4) sdash -> chunk . laststat SEMI
    (5) chunk -> chunk . stat
    (6) chunk -> chunk . stat SEMI
    (33) laststat -> . return retexplist
    (34) laststat -> . return
    (35) laststat -> . break
    (10) stat -> . varlist EQUALS explist
    (11) stat -> . for names EQUALS exp COMMA exp do block end
    (12) stat -> . for names EQUALS exp COMMA exp COMMA exp do block end
    (13) stat -> . for namelist in explist do block end
    (14) stat -> . while exp do block end
    (15) stat -> . repeat block until exp
    (16) stat -> . do block end
    (17) stat -> . function funcname funcbody
    (18) stat -> . local function names funcbody
    (19) stat -> . local namelist
    (20) stat -> . local namelist EQUALS explist
    (21) stat -> . functioncall
    (44) stat -> . if exp then M_if1 block ifblock end
    (46) stat -> . if exp then M_if1 block ifblock M_if3 else M_if4 block end
    (54) varlist -> . var comvar
    (24) functioncall -> . prefixexp args
    (55) var -> . names
    (56) var -> . prefixexp LSQUARE exp RSQUARE
    (57) var -> . prefixexp SDOT names
    (116) prefixexp -> . var
    (117) prefixexp -> . LPAREN exp RPAREN
    (118) prefixexp -> . functioncall
    (133) names -> . ID
    (134) names -> . RESID

    end             reduce using rule 1 (sdash -> chunk .)
    else            reduce using rule 1 (sdash -> chunk .)
    elseif          reduce using rule 1 (sdash -> chunk .)
    $end            reduce using rule 1 (sdash -> chunk .)
    until           reduce using rule 1 (sdash -> chunk .)
    return          shift and go to state 16
    break           shift and go to state 17
    for             shift and go to state 7
    while           shift and go to state 20
    repeat          shift and go to state 15
    do              shift and go to state 13
    function        shift and go to state 12
    local           shift and go to state 19
    if              shift and go to state 5
    LPAREN          shift and go to state 2
    ID              shift and go to state 18
    RESID           shift and go to state 1

    prefixexp                      shift and go to state 6
    stat                           shift and go to state 43
    varlist                        shift and go to state 8
    laststat                       shift and go to state 42
    names                          shift and go to state 4
    var                            shift and go to state 10
    functioncall                   shift and go to state 11

state 4

    (55) var -> names .

    COMMA           reduce using rule 55 (var -> names .)
    EQUALS          reduce using rule 55 (var -> names .)
    LSQUARE         reduce using rule 55 (var -> names .)
    SDOT            reduce using rule 55 (var -> names .)
    LPAREN          reduce using rule 55 (var -> names .)
    STRING          reduce using rule 55 (var -> names .)
    LCURLY          reduce using rule 55 (var -> names .)
    PLUS            reduce using rule 55 (var -> names .)
    MINUS           reduce using rule 55 (var -> names .)
    TIMES           reduce using rule 55 (var -> names .)
    DIVIDE          reduce using rule 55 (var -> names .)
    POWER           reduce using rule 55 (var -> names .)
    LT              reduce using rule 55 (var -> names .)
    LE              reduce using rule 55 (var -> names .)
    GT              reduce using rule 55 (var -> names .)
    GE              reduce using rule 55 (var -> names .)
    NE              reduce using rule 55 (var -> names .)
    CHECKEQ         reduce using rule 55 (var -> names .)
    and             reduce using rule 55 (var -> names .)
    or              reduce using rule 55 (var -> names .)
    MODULO          reduce using rule 55 (var -> names .)
    DBLDOTS         reduce using rule 55 (var -> names .)
    $end            reduce using rule 55 (var -> names .)
    SEMI            reduce using rule 55 (var -> names .)
    end             reduce using rule 55 (var -> names .)
    until           reduce using rule 55 (var -> names .)
    else            reduce using rule 55 (var -> names .)
    elseif          reduce using rule 55 (var -> names .)
    RPAREN          reduce using rule 55 (var -> names .)
    then            reduce using rule 55 (var -> names .)
    do              reduce using rule 55 (var -> names .)
    RCURLY          reduce using rule 55 (var -> names .)
    RSQUARE         reduce using rule 55 (var -> names .)
    return          reduce using rule 55 (var -> names .)
    break           reduce using rule 55 (var -> names .)
    for             reduce using rule 55 (var -> names .)
    while           reduce using rule 55 (var -> names .)
    repeat          reduce using rule 55 (var -> names .)
    function        reduce using rule 55 (var -> names .)
    local           reduce using rule 55 (var -> names .)
    if              reduce using rule 55 (var -> names .)
    ID              reduce using rule 55 (var -> names .)
    RESID           reduce using rule 55 (var -> names .)


state 5

    (44) stat -> if . exp then M_if1 block ifblock end
    (46) stat -> if . exp then M_if1 block ifblock M_if3 else M_if4 block end
    (61) exp -> . nil
    (62) exp -> . false
    (63) exp -> . true
    (64) exp -> . Number
    (65) exp -> . STRING
    (66) exp -> . TRPLDOTS
    (67) exp -> . function
    (68) exp -> . prefixexp
    (69) exp -> . exp PLUS exp
    (70) exp -> . exp MINUS exp
    (71) exp -> . exp TIMES exp
    (72) exp -> . exp DIVIDE exp
    (73) exp -> . exp POWER exp
    (74) exp -> . exp LT exp
    (75) exp -> . exp LE exp
    (76) exp -> . exp GT exp
    (77) exp -> . exp GE exp
    (78) exp -> . exp NE exp
    (79) exp -> . exp CHECKEQ exp
    (80) exp -> . exp and exp
    (81) exp -> . exp or exp
    (82) exp -> . exp MODULO exp
    (83) exp -> . exp DBLDOTS exp
    (84) exp -> . tableconstructor
    (85) exp -> . unop exp
    (112) Number -> . INTEGER
    (113) Number -> . FLOAT
    (114) Number -> . HEX
    (116) prefixexp -> . var
    (117) prefixexp -> . LPAREN exp RPAREN
    (118) prefixexp -> . functioncall
    (122) tableconstructor -> . LCURLY fieldlist RCURLY
    (123) tableconstructor -> . LCURLY RCURLY
    (119) unop -> . MINUS
    (120) unop -> . not
    (121) unop -> . HASH
    (55) var -> . names
    (56) var -> . prefixexp LSQUARE exp RSQUARE
    (57) var -> . prefixexp SDOT names
    (24) functioncall -> . prefixexp args
    (133) names -> . ID
    (134) names -> . RESID

    nil             shift and go to state 32
    false           shift and go to state 23
    true            shift and go to state 35
    STRING          shift and go to state 27
    TRPLDOTS        shift and go to state 41
    function        shift and go to state 31
    INTEGER         shift and go to state 30
    FLOAT           shift and go to state 36
    HEX             shift and go to state 33
    LPAREN          shift and go to state 2
    LCURLY          shift and go to state 24
    MINUS           shift and go to state 26
    not             shift and go to state 34
    HASH            shift and go to state 25
    ID              shift and go to state 18
    RESID           shift and go to state 1

    prefixexp                      shift and go to state 28
    tableconstructor               shift and go to state 22
    names                          shift and go to state 4
    Number                         shift and go to state 37
    unop                           shift and go to state 40
    functioncall                   shift and go to state 38
    exp                            shift and go to state 44
    var                            shift and go to state 29

state 6

    (24) functioncall -> prefixexp . args
    (56) var -> prefixexp . LSQUARE exp RSQUARE
    (57) var -> prefixexp . SDOT names
    (25) args -> . LPAREN RPAREN
    (26) args -> . LPAREN explist RPAREN
    (27) args -> . tableconstructor
    (28) args -> . STRING
    (122) tableconstructor -> . LCURLY fieldlist RCURLY
    (123) tableconstructor -> . LCURLY RCURLY

    LSQUARE         shift and go to state 46
    SDOT            shift and go to state 49
    LPAREN          shift and go to state 48
    STRING          shift and go to state 50
    LCURLY          shift and go to state 24

    tableconstructor               shift and go to state 45
    args                           shift and go to state 47

state 7

    (11) stat -> for . names EQUALS exp COMMA exp do block end
    (12) stat -> for . names EQUALS exp COMMA exp COMMA exp do block end
    (13) stat -> for . namelist in explist do block end
    (133) names -> . ID
    (134) names -> . RESID
    (58) namelist -> . names comid

    ID              shift and go to state 18
    RESID           shift and go to state 1

    namelist                       shift and go to state 51
    names                          shift and go to state 52

state 8

    (10) stat -> varlist . EQUALS explist

    EQUALS          shift and go to state 53


state 9

    (3) sdash -> laststat .

    end             reduce using rule 3 (sdash -> laststat .)
    else            reduce using rule 3 (sdash -> laststat .)
    elseif          reduce using rule 3 (sdash -> laststat .)
    $end            reduce using rule 3 (sdash -> laststat .)
    until           reduce using rule 3 (sdash -> laststat .)


state 10

    (54) varlist -> var . comvar
    (116) prefixexp -> var .
    (40) comvar -> . COMMA var comvar
    (41) comvar -> . empty
    (115) empty -> .

    LSQUARE         reduce using rule 116 (prefixexp -> var .)
    SDOT            reduce using rule 116 (prefixexp -> var .)
    LPAREN          reduce using rule 116 (prefixexp -> var .)
    STRING          reduce using rule 116 (prefixexp -> var .)
    LCURLY          reduce using rule 116 (prefixexp -> var .)
    COMMA           shift and go to state 54
    EQUALS          reduce using rule 115 (empty -> .)

    comvar                         shift and go to state 55
    empty                          shift and go to state 56

state 11

    (21) stat -> functioncall .
    (118) prefixexp -> functioncall .

  ! reduce/reduce conflict for LPAREN resolved using rule 21 (stat -> functioncall .)
    SEMI            reduce using rule 21 (stat -> functioncall .)
    return          reduce using rule 21 (stat -> functioncall .)
    break           reduce using rule 21 (stat -> functioncall .)
    for             reduce using rule 21 (stat -> functioncall .)
    while           reduce using rule 21 (stat -> functioncall .)
    repeat          reduce using rule 21 (stat -> functioncall .)
    do              reduce using rule 21 (stat -> functioncall .)
    function        reduce using rule 21 (stat -> functioncall .)
    local           reduce using rule 21 (stat -> functioncall .)
    if              reduce using rule 21 (stat -> functioncall .)
    LPAREN          reduce using rule 21 (stat -> functioncall .)
    ID              reduce using rule 21 (stat -> functioncall .)
    RESID           reduce using rule 21 (stat -> functioncall .)
    end             reduce using rule 21 (stat -> functioncall .)
    $end            reduce using rule 21 (stat -> functioncall .)
    until           reduce using rule 21 (stat -> functioncall .)
    else            reduce using rule 21 (stat -> functioncall .)
    elseif          reduce using rule 21 (stat -> functioncall .)
    LSQUARE         reduce using rule 118 (prefixexp -> functioncall .)
    SDOT            reduce using rule 118 (prefixexp -> functioncall .)
    STRING          reduce using rule 118 (prefixexp -> functioncall .)
    LCURLY          reduce using rule 118 (prefixexp -> functioncall .)

  ! LPAREN          [ reduce using rule 118 (prefixexp -> functioncall .) ]


state 12

    (17) stat -> function . funcname funcbody
    (36) funcname -> . names dotid COLON
    (37) funcname -> . names
    (133) names -> . ID
    (134) names -> . RESID

    ID              shift and go to state 18
    RESID           shift and go to state 1

    names                          shift and go to state 58
    funcname                       shift and go to state 57

state 13

    (16) stat -> do . block end
    (9) block -> . sdash
    (1) sdash -> . chunk
    (2) sdash -> . chunk laststat
    (3) sdash -> . laststat
    (4) sdash -> . chunk laststat SEMI
    (5) chunk -> . chunk stat
    (6) chunk -> . chunk stat SEMI
    (7) chunk -> . stat SEMI
    (8) chunk -> . stat
    (33) laststat -> . return retexplist
    (34) laststat -> . return
    (35) laststat -> . break
    (10) stat -> . varlist EQUALS explist
    (11) stat -> . for names EQUALS exp COMMA exp do block end
    (12) stat -> . for names EQUALS exp COMMA exp COMMA exp do block end
    (13) stat -> . for namelist in explist do block end
    (14) stat -> . while exp do block end
    (15) stat -> . repeat block until exp
    (16) stat -> . do block end
    (17) stat -> . function funcname funcbody
    (18) stat -> . local function names funcbody
    (19) stat -> . local namelist
    (20) stat -> . local namelist EQUALS explist
    (21) stat -> . functioncall
    (44) stat -> . if exp then M_if1 block ifblock end
    (46) stat -> . if exp then M_if1 block ifblock M_if3 else M_if4 block end
    (54) varlist -> . var comvar
    (24) functioncall -> . prefixexp args
    (55) var -> . names
    (56) var -> . prefixexp LSQUARE exp RSQUARE
    (57) var -> . prefixexp SDOT names
    (116) prefixexp -> . var
    (117) prefixexp -> . LPAREN exp RPAREN
    (118) prefixexp -> . functioncall
    (133) names -> . ID
    (134) names -> . RESID

    return          shift and go to state 16
    break           shift and go to state 17
    for             shift and go to state 7
    while           shift and go to state 20
    repeat          shift and go to state 15
    do              shift and go to state 13
    function        shift and go to state 12
    local           shift and go to state 19
    if              shift and go to state 5
    LPAREN          shift and go to state 2
    ID              shift and go to state 18
    RESID           shift and go to state 1

    chunk                          shift and go to state 3
    names                          shift and go to state 4
    prefixexp                      shift and go to state 6
    varlist                        shift and go to state 8
    laststat                       shift and go to state 9
    var                            shift and go to state 10
    functioncall                   shift and go to state 11
    stat                           shift and go to state 14
    sdash                          shift and go to state 59
    block                          shift and go to state 60

state 14

    (7) chunk -> stat . SEMI
    (8) chunk -> stat .

    SEMI            shift and go to state 61
    return          reduce using rule 8 (chunk -> stat .)
    break           reduce using rule 8 (chunk -> stat .)
    for             reduce using rule 8 (chunk -> stat .)
    while           reduce using rule 8 (chunk -> stat .)
    repeat          reduce using rule 8 (chunk -> stat .)
    do              reduce using rule 8 (chunk -> stat .)
    function        reduce using rule 8 (chunk -> stat .)
    local           reduce using rule 8 (chunk -> stat .)
    if              reduce using rule 8 (chunk -> stat .)
    LPAREN          reduce using rule 8 (chunk -> stat .)
    ID              reduce using rule 8 (chunk -> stat .)
    RESID           reduce using rule 8 (chunk -> stat .)
    end             reduce using rule 8 (chunk -> stat .)
    else            reduce using rule 8 (chunk -> stat .)
    elseif          reduce using rule 8 (chunk -> stat .)
    until           reduce using rule 8 (chunk -> stat .)
    $end            reduce using rule 8 (chunk -> stat .)


state 15

    (15) stat -> repeat . block until exp
    (9) block -> . sdash
    (1) sdash -> . chunk
    (2) sdash -> . chunk laststat
    (3) sdash -> . laststat
    (4) sdash -> . chunk laststat SEMI
    (5) chunk -> . chunk stat
    (6) chunk -> . chunk stat SEMI
    (7) chunk -> . stat SEMI
    (8) chunk -> . stat
    (33) laststat -> . return retexplist
    (34) laststat -> . return
    (35) laststat -> . break
    (10) stat -> . varlist EQUALS explist
    (11) stat -> . for names EQUALS exp COMMA exp do block end
    (12) stat -> . for names EQUALS exp COMMA exp COMMA exp do block end
    (13) stat -> . for namelist in explist do block end
    (14) stat -> . while exp do block end
    (15) stat -> . repeat block until exp
    (16) stat -> . do block end
    (17) stat -> . function funcname funcbody
    (18) stat -> . local function names funcbody
    (19) stat -> . local namelist
    (20) stat -> . local namelist EQUALS explist
    (21) stat -> . functioncall
    (44) stat -> . if exp then M_if1 block ifblock end
    (46) stat -> . if exp then M_if1 block ifblock M_if3 else M_if4 block end
    (54) varlist -> . var comvar
    (24) functioncall -> . prefixexp args
    (55) var -> . names
    (56) var -> . prefixexp LSQUARE exp RSQUARE
    (57) var -> . prefixexp SDOT names
    (116) prefixexp -> . var
    (117) prefixexp -> . LPAREN exp RPAREN
    (118) prefixexp -> . functioncall
    (133) names -> . ID
    (134) names -> . RESID

    return          shift and go to state 16
    break           shift and go to state 17
    for             shift and go to state 7
    while           shift and go to state 20
    repeat          shift and go to state 15
    do              shift and go to state 13
    function        shift and go to state 12
    local           shift and go to state 19
    if              shift and go to state 5
    LPAREN          shift and go to state 2
    ID              shift and go to state 18
    RESID           shift and go to state 1

    chunk                          shift and go to state 3
    names                          shift and go to state 4
    prefixexp                      shift and go to state 6
    varlist                        shift and go to state 8
    laststat                       shift and go to state 9
    var                            shift and go to state 10
    functioncall                   shift and go to state 11
    stat                           shift and go to state 14
    block                          shift and go to state 62
    sdash                          shift and go to state 59

state 16
